--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="ADUSTECH - Official mobile application for Aliko Dangote University of Science and Technology students. Download now for Android and iOS.">
     <meta name="keywords" content="ADUSTECH, University App, Student Portal, Android App, iOS App, Download">
+    <meta name="author" content="ADUSTECH">
+    <meta name="robots" content="index, follow">
+    <meta name="googlebot" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
+    <meta name="bingbot" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
+    <link rel="canonical" href="https://adustech.vercel.app/">
+    <!-- Google Search Console Verification (Replace with your verification code) -->
+    <!-- <meta name="google-site-verification" content="YOUR_VERIFICATION_CODE_HERE"> -->
     <title>ADUSTECH Mobile App - Download for Android & iOS</title>
     
     <!-- Theme Color -->
