--- a/countdown.html
+++ b/countdown.html
@@ -246,7 +246,7 @@
     <div class="countdown-container">
         <!-- Logo -->
         <div class="logo-container">
-            <div class="logo">A</div>
+            <img class="logo" src="assets/images/icon.jpg"/>
         </div>
 
         <!-- Title -->
