--- a/index.html
+++ b/index.html
@@ -150,9 +150,9 @@
                         events, channels, and more – all in one powerful mobile application.
                     </p>
                     <div class="hero-buttons">
-                        <a href="#download" class="btn btn-primary">
+                        <a href="downloads/adustech.apk" class="btn btn-primary" download>
                             <i class="fab fa-android"></i>
-                            Download for Android
+                            Download for Android (91.33 MB)
                         </a>
                         <a href="#download" class="btn btn-primary" style="background: #000; border-color: #000;">
                             <i class="fab fa-apple"></i>
@@ -312,12 +312,12 @@
                             </div>
                             <div class="download-card-body">
                                 <div class="download-info">
-                                    <span class="file-size">~50 MB</span>
+                                    <span class="file-size">91.33 MB</span>
                                     <span class="version">Version 1.0.0</span>
                                 </div>
                                 <a href="downloads/adustech.apk" class="btn btn-download" download style="background: #3ddc84; border-color: #3ddc84;">
                                     <i class="fab fa-android"></i>
-                                    Download for Android
+                                    Download APK (91.33 MB)
                                 </a>
                             </div>
                         </div>
@@ -347,8 +347,8 @@
                         <i class="fas fa-info-circle"></i>
                         <div>
                             <h4>Installation Instructions</h4>
-                            <p style="margin-bottom: 10px;"><strong><i class="fab fa-android"></i> Android:</strong> Download the APK file, open it, enable "Install from Unknown Sources" if prompted, and follow the installation prompts.</p>
-                            <p><strong><i class="fab fa-apple"></i> iOS:</strong> Download the IPA file or install directly from the App Store when available.</p>
+                            <p style="margin-bottom: 10px;"><strong><i class="fab fa-android"></i> Android (91.33 MB):</strong> Download the APK file. Go to Settings → Security → Enable "Install from Unknown Sources" or "Install Unknown Apps". Open the downloaded APK file and tap Install. Follow the on-screen prompts to complete installation.</p>
+                            <p><strong><i class="fab fa-apple"></i> iOS:</strong> Coming soon! The iOS version will be available on the App Store.</p>
                         </div>
                     </div>
                 </div>
@@ -507,7 +507,7 @@
                 <div class="footer-section">
                     <h3 class="footer-title">Download</h3>
                     <ul class="footer-links">
-                        <li><a href="downloads/adustech.apk" download><i class="fab fa-android"></i> Android App</a></li>
+                        <li><a href="downloads/adustech.apk" download><i class="fab fa-android"></i> Android App (91.33 MB)</a></li>
                         <li><a href="downloads/adustech.ipa" download><i class="fab fa-apple"></i> iOS App</a></li>
                         <li><a href="pages/installation-guide.html">Installation Guide</a></li>
                         <li><a href="pages/system-requirements.html">System Requirements</a></li>
